# ChallengeCSIBALANCE

./: .gitignore  README.md  final_model.json  final_model1.json  final_model2.json  pyproject.toml
challengcsibalance/client/: client_app.py
challengcsibalance/server/: __init__.py  server_app.py
exploration/: .~lock.submission.csv#  detail.ipynb  filtering.ipynb  final_model.ipynb  final_model.pt  final_model1.json  final_model4.json  final_model5.json  final_model6.json  final_model7.json  final_model8.json  models copy.ipynb  models.ipynb  submission.csv  submission2.csv  submission3.csv  submission4.csv  submission5.csv  submission8.csv  test.ipynb  testing_final_model.ipynb  visualizzation.ipynb  xgboost.ipynb
exploration/filtered_data/group0/: dataset_user_0_train.csv  dataset_user_27_train.csv  dataset_user_36_train.csv  dataset_user_9_train.csv
exploration/filtered_data/group1/: dataset_user_10_train.csv  dataset_user_19_train.csv  dataset_user_1_train.csv  dataset_user_28_train.csv  dataset_user_37_train.csv
exploration/filtered_data/group2/: dataset_user_11_train.csv  dataset_user_20_train.csv  dataset_user_29_train.csv  dataset_user_2_train.csv  dataset_user_38_train.csv
exploration/filtered_data/group3/: dataset_user_12_train.csv  dataset_user_21_train.csv  dataset_user_30_train.csv  dataset_user_39_train.csv  dataset_user_3_train.csv
exploration/filtered_data/group4/: dataset_user_13_train.csv  dataset_user_22_train.csv  dataset_user_31_train.csv  dataset_user_40_train.csv  dataset_user_4_train.csv
exploration/filtered_data/group5/: dataset_user_14_train.csv  dataset_user_23_train.csv  dataset_user_32_train.csv  dataset_user_41_train.csv  dataset_user_5_train.csv
(+15 files in other folders)
