# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "challengcsibalance"
version = "1.0.0"
description = ""
license = "Apache-2.0"
requires-python= ">=3.11,<4.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "kaggle (>=1.8.2,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "agrume"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "challengcsibalance.server.server_app:app"
clientapp = "challengcsibalance.client.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 1.0
fraction-evaluate = 1.0
local-epochs = 1

# XGBoost parameters
params.n_estimators=300
params.max_depth=4
params.learning_rate=0.05
params.subsample=0.8
params.colsample_bytree=0.8
params.reg_alpha=0.1
params.reg_lambda=1.0
params.random_state=42
params.n_jobs=-1

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 9
